Responsive layout issue

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
-    min-height: 100%;
+    height: 100%
 }
 .body{
     background-image: url(wild-nature-7680x4320.jpg);
@@ -17,6 +17,8 @@ body{
     background-blend-mode: normal;
     background-position: center;
     background-attachment: fixed;
+    width: 100%;
+    height: 100%;
 
 }
 .loader {
